Fixed Eternaltwin name (soul FR)

--- a/translations/soul+intl-icu.fr.xlf
+++ b/translations/soul+intl-icu.fr.xlf
@@ -4341,7 +4341,7 @@
       </notes>
       <segment>
         <source>Profil Eternal-Twin</source>
-        <target>Profil Eternal-Twin</target>
+        <target>Profil Eternaltwin</target>
       </segment>
     </unit>
     <unit id="abqsDy0" name="Schreiben">
