--- a/translations/admin+intl-icu.de.xlf
+++ b/translations/admin+intl-icu.de.xlf
@@ -2770,7 +2770,7 @@
     <unit id="jPmvEEG" name="Eternal-Twin-Konto verlinkt">
       <segment>
         <source>Eternal-Twin-Konto verlinkt</source>
-        <target>Eternal-Twin-Konto verlinkt</target>
+        <target>Eternaltwin-Konto verlinkt</target>
       </segment>
     </unit>
     <unit id="_VFidG8" name="Gruppentyp">
