--- a/translations/admin+intl-icu.es.xlf
+++ b/translations/admin+intl-icu.es.xlf
@@ -4503,5 +4503,16 @@
         <target>Bitte nicht für mehrere Bürger denselben Alias eingeben!</target>
       </segment>
     </unit>
+    <unit id="NcKgihM" name="Bank leeren">
+      <notes>
+        <note category="german">Bank leeren</note>
+        <note category="from">twig:///templates/ajax/admin/towns/explorer.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Bank leeren</source>
+        <target>Vaciar el almacén</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
