--- a/translations/admin+intl-icu.de.xlf
+++ b/translations/admin+intl-icu.de.xlf
@@ -2851,5 +2851,11 @@
         <target>Bank leeren</target>
       </segment>
     </unit>
+    <unit id="u2ktkWy" name="Stadt-Event">
+      <segment>
+        <source>Stadt-Event</source>
+        <target>Stadt-Event</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
