--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -22426,7 +22426,7 @@ cette violente opération...]]></target>
       </notes>
       <segment>
         <source>Dieser Bürger wurde aus der Gemeinschaft verbannt; er hat nicht länger Zugang zu den Gebäuden der Stadt, mit Ausnahme des Brunnens (wobei er auf eine Ration pro Tag eingeschränkt ist).</source>
-        <target>Ce citoyen a été banni de la communauté : il ne pourra plus avoir accès aux dispositifs de la ville, à l'exception du puits (limité toutefois à la ration quotidienne, sans supplémentaire).</target>
+        <target>Ce citoyen a été banni de la communauté : il ne pourra plus avoir accès aux dispositifs de la ville, à l'exception du puits (limité toutefois à la ration quotidienne, sans prise supplémentaire).</target>
       </segment>
     </unit>
     <unit id="Xrx5c_.">
