ES own rank correction

--- a/translations/global+intl-icu.es.xlf
+++ b/translations/global+intl-icu.es.xlf
@@ -4196,7 +4196,7 @@
       </notes>
       <segment>
         <source>Zu meinem Eintrag springen</source>
-        <target>Saltar a mi entrada</target>
+        <target>Ir a mi posición</target>
       </segment>
     </unit>
     <unit id="LiAR2Wp" name="Hinweis">
