--- a/translations/buildings+intl-icu.es.xlf
+++ b/translations/buildings+intl-icu.es.xlf
@@ -708,7 +708,7 @@
       </notes>
       <segment>
         <source>Der Verteidigungsbonus von Gegenständen in der Bank steigt um 100%.</source>
-        <target>Cada objeto de defensa en el Almacén aporta 2 puntos de defensa adicionales al pueblo.</target>
+        <target>Cada objeto de defensa en el Almacén aporta 2 puntos de defensa al pueblo.</target>
       </segment>
     </unit>
     <unit id="GLo_FzK" name="Der Verteidigungsbonus von Gegenständen in der Bank steigt um 150%.">
@@ -718,7 +718,7 @@
       </notes>
       <segment>
         <source>Der Verteidigungsbonus von Gegenständen in der Bank steigt um 150%.</source>
-        <target>Cada objeto de defensa en el Almacén aporta 2.5 puntos de defensa adicionales al pueblo.</target>
+        <target>Cada objeto de defensa en el Almacén aporta 2.5 puntos de defensa al pueblo.</target>
       </segment>
     </unit>
     <unit id="l3tFIbP" name="Der Verteidigungsbonus von Gegenständen in der Bank steigt um 200%.">
@@ -728,7 +728,7 @@
       </notes>
       <segment>
         <source>Der Verteidigungsbonus von Gegenständen in der Bank steigt um 200%.</source>
-        <target>Cada objeto de defensa en el Almacén aporta 3 puntos de defensa adicionales al pueblo.</target>
+        <target>Cada objeto de defensa en el Almacén aporta 3 puntos de defensa al pueblo.</target>
       </segment>
     </unit>
     <unit id="FXvZuCC" name="Der Verteidigungsbonus von Gegenständen in der Bank steigt um 250%.">
@@ -738,7 +738,7 @@
       </notes>
       <segment>
         <source>Der Verteidigungsbonus von Gegenständen in der Bank steigt um 250%.</source>
-        <target>Cada objeto de defensa en el Almacén aporta 3.5 puntos de defensa adicionales al pueblo.</target>
+        <target>Cada objeto de defensa en el Almacén aporta 3.5 puntos de defensa al pueblo.</target>
       </segment>
     </unit>
     <unit id="fPl.xwk" name="Der Verteidigungsbonus von Gegenständen in der Bank steigt um 300%.">
@@ -748,7 +748,7 @@
       </notes>
       <segment>
         <source>Der Verteidigungsbonus von Gegenständen in der Bank steigt um 300%.</source>
-        <target>Cada objeto de defensa en el Almacén aporta 4 puntos de defensa adicionales al pueblo.</target>
+        <target>Cada objeto de defensa en el Almacén aporta 4 puntos de defensa al pueblo.</target>
       </segment>
     </unit>
     <unit id="Vln90x5" name="Steinkanone">
@@ -3750,7 +3750,7 @@
       </notes>
       <segment>
         <source>Jeder in der Bank abgelegte Verteidigungsgegenstand bringt der Stadt 1.5 Verteidigungspunkte zusätzlich ein.</source>
-        <target>Cada objeto de defensa en el Almacén aporta 1.5 puntos de defensa adicionales al pueblo.</target>
+        <target>Cada objeto de defensa en el Almacén aporta 1.5 puntos de defensa al pueblo.</target>
       </segment>
     </unit>
     <unit id="0O20i7a" name="Die Stadt erhält nach dem nächsten Angriff einmalig 1 gewöhnliche Baupläne.">
