ES correction (apportan->aportan)

--- a/translations/buildings+intl-icu.es.xlf
+++ b/translations/buildings+intl-icu.es.xlf
@@ -3770,7 +3770,7 @@
       </notes>
       <segment>
         <source>Der Wasserwerfer gibt 70 zusätzliche Verteidigungspunkte.</source>
-        <target>Los sistemas de riego apportan 70 puntos de defensa.</target>
+        <target>Los sistemas de riego aportan 70 puntos de defensa.</target>
       </segment>
     </unit>
   </file>
