--- a/translations/items+intl-icu.es.xlf
+++ b/translations/items+intl-icu.es.xlf
@@ -9425,7 +9425,7 @@
       </notes>
       <segment>
         <source>Du kannst dieses Serum nicht auf dich selbst anwenden, oder du wirst der beste Freund eines Ghuls...</source>
-        <target>Du kannst dieses Serum nicht auf dich selbst anwenden, oder du wirst der beste Freund eines Ghuls...</target>
+        <target>No puedes aplicar la vacuna sobre ti mismo, te volverías el mejor amigo de un mutante...</target>
       </segment>
     </unit>
     <unit id="j.Nx9To" name="Eintrittskarte">
