--- a/translations/items+intl-icu.es.xlf
+++ b/translations/items+intl-icu.es.xlf
@@ -9445,7 +9445,7 @@
       </notes>
       <segment>
         <source>Hiermit kannst du Städten beitreten, obwohl du die Mindestanzahl an Seelenpunkten noch nicht erreicht hast.</source>
-        <target>Esto te permite unirte a ciudades aunque no hayas alcanzado el número mínimo de puntos de alma.</target>
+        <target>Esto te permite unirte a pueblos aunque no hayas alcanzado el número mínimo de puntos de alma necesarios.</target>
       </segment>
     </unit>
   </file>
