--- a/translations/admin+intl-icu.es.xlf
+++ b/translations/admin+intl-icu.es.xlf
@@ -4478,7 +4478,7 @@
       </notes>
       <segment>
         <source>Bürger-Alias ​​ändern:</source>
-        <target>Bürger-Alias ​​ändern:</target>
+        <target>Cambiar apodo del habitante:</target>
       </segment>
     </unit>
     <unit id="7.npMFZ" name="Kein Alias ​​angegeben">
@@ -4489,7 +4489,7 @@
       </notes>
       <segment>
         <source>Kein Alias ​​angegeben</source>
-        <target>Kein Alias ​​angegeben</target>
+        <target>Sin apodo definido</target>
       </segment>
     </unit>
     <unit id="u5LKixo" name="Bitte nicht für mehrere Bürger denselben Alias eingeben!">
@@ -4500,7 +4500,7 @@
       </notes>
       <segment>
         <source>Bitte nicht für mehrere Bürger denselben Alias eingeben!</source>
-        <target>Bitte nicht für mehrere Bürger denselben Alias eingeben!</target>
+        <target>¡Por favor, no utilices el mismo apodo para diferentes habitantes!</target>
       </segment>
     </unit>
   </file>
