--- a/translations/soul+intl-icu.es.xlf
+++ b/translations/soul+intl-icu.es.xlf
@@ -4394,7 +4394,7 @@
       </notes>
       <segment>
         <source>Freundesliste</source>
-        <target>Lista de Amigos</target>
+        <target>Lista de contactos</target>
       </segment>
     </unit>
     <unit id="_cSDjRl" name="Spieler werben">
@@ -4414,7 +4414,7 @@
       </notes>
       <segment>
         <source>Wahrer Freund</source>
-        <target>Amigo Verdadero</target>
+        <target>Amigo</target>
       </segment>
     </unit>
     <unit id="aWNhyEI" name="Deine Freundesliste ist leer.">
@@ -4424,7 +4424,7 @@
       </notes>
       <segment>
         <source>Deine Freundesliste ist leer.</source>
-        <target>Tu lista de amigos está vacía.</target>
+        <target>Tu lista de contactos está vacía.</target>
       </segment>
     </unit>
     <unit id="vHUeAVJ" name="Neue Freunde finden">
@@ -4444,7 +4444,7 @@
       </notes>
       <segment>
         <source>Gib hier den Nickname des Spielers ein, den du als Freund hinzufügen möchtest.</source>
-        <target>Ingresa el nombre de un jugador que quieras agregar como amigo.</target>
+        <target>Ingresa el nombre de algún jugador que quieras agregar como contacto.</target>
       </segment>
     </unit>
     <unit id="BHCazk7" name="Spieler, die dich als Freund hinzugefügt haben">
@@ -4454,7 +4454,7 @@
       </notes>
       <segment>
         <source>Spieler, die dich als Freund hinzugefügt haben</source>
-        <target>Jugadores que te agregaron a su lista de amigos</target>
+        <target>Jugadores que te agregaron a su lista de contactos</target>
       </segment>
     </unit>
     <unit id="xMippYH">
@@ -4464,7 +4464,7 @@
       </notes>
       <segment>
         <source>Hier siehst du Spieler, die dich in ihre Freundesliste eingetragen haben. Wenn du möchtest, kannst du sie ebenfalls in deine Freundesliste eintragen.</source>
-        <target>Aquí puedes ver los jugadores que te han agregado a su lista de amigos. Si quieres, puedes agregarlos a tu lista de amigos también.</target>
+        <target>Aquí puedes ver los jugadores que te han agregado a su lista de contactos. Si quieres, puedes agregarlos a tu lista de contactos también(y así seréis amigos).</target>
       </segment>
     </unit>
     <unit id="pPMWL8v">
