Added FR council

--- a/translations/council+intl-icu.fr.xlf
+++ b/translations/council+intl-icu.fr.xlf
@@ -410,7 +410,7 @@
       </notes>
       <segment>
         <source>Solange ich das nicht bin, ist mir das völlig egal!</source>
-        <target>Solange ich das nicht bin, ist mir das völlig egal!</target>
+        <target>Du moment que ce n'est pas moi... ça me va.</target>
       </segment>
     </unit>
     <unit id="9vOwPIF" name="Also, ich fange an zu glauben, dass es mir eigentlich egal ist...">
